src/objects/peer__Credit_Rating_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>peer__High_Interest__c</fullName>
        <label>High Interest</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Insurance_Rate__c</fullName>
        <label>Insurance Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Low_Interest__c</fullName>
        <label>Low Interest</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Rating__c</fullName>
        <label>Rating</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Service_Rate__c</fullName>
        <label>Service Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Credit Rating Matrix</label>
    <listViews>
        <fullName>peer__All</fullName>
        <columns>NAME</columns>
        <columns>peer__Rating__c</columns>
        <columns>peer__Insurance_Rate__c</columns>
        <columns>peer__High_Interest__c</columns>
        <columns>peer__Low_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>peer__Credit_Matrix</fullName>
        <columns>peer__Rating__c</columns>
        <columns>peer__Low_Interest__c</columns>
        <columns>peer__High_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <label>Credit Matrix</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Credit Rating Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Rating Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>